--- a/src/sections/tema.scss
+++ b/src/sections/tema.scss
@@ -125,7 +125,7 @@ body.light &__nav a {
   width: 100%;
   object-fit: contain;
   max-width: 270px;
-  padding: 0rem 5rem 3rem;
+  padding: 1rem 18rem 3rem;
 }
 
 &__nav img { padding-top: 4rem;}
